# pop-launcher-plugin-spell

./: .gitignore  Cargo.toml  Makefile  README.md  spell
.github/workflows/: release.yml
DEBIAN/: control
debian/: changelog  control  copyright
src/: main.rs  plugin.ron  spell
usr/pop-launcher/plugins/spell/: spell
